# relay-chat

./: CMakeLists.txt  README.md  TEST  build.sh  flake.nix
include/: channel.hh  channel.hpp  client.hh  client.hpp  configurations.hh  managers.hh  managers.hpp  protocol.hh  server.hh  server.hpp  thread_pool.hh  thread_pool.hpp  typedef.hh  utilities.hh  utilities.hpp  websocket_server.hh
src/: channel.cc  channel.cpp  client.cc  client.cpp  main.cc  main.cpp  managers.cc  managers.cpp  protocol.cc  server.cc  server.cpp  utilities.cc  utilities.cpp  websocket_server.cc
tests/: client_tests.cc  protocol_tests.cc  websocket.py
